--- a/travel-world-web/src/main/resources/application.yml
+++ b/travel-world-web/src/main/resources/application.yml
@@ -7,16 +7,16 @@ server:
 #logging:
 #  config: classpath:log4j2.xml
 
-eureka:
-  instance:
-    hostname: 192.168.171.16
-    prefer-ip-address: false
-    ip-address: 192.168.171.16
-  client:
-    registerWithEureka: false
-    fetchRegistry: false
-    serviceUrl: 
-      defaultZone: http://${eureka.instance.hostname}:9006/eureka/
+#eureka:
+#  instance:
+#    hostname: 192.168.171.16
+#    prefer-ip-address: false
+#    ip-address: 192.168.171.16
+#  client:
+#    registerWithEureka: false
+#    fetchRegistry: false
+#    serviceUrl: 
+#      defaultZone: http://${eureka.instance.hostname}:9006/eureka/
 
 endpoints:
   health:
@@ -24,7 +24,7 @@ endpoints:
 #######启动时，需要扫描的包名，多个以逗号分开#######
 app: 
   scan: 
-    packages: cn.qtb
+    packages: cn.travel.world
     excludeName: #########启动时，需要过滤的class(要加包名)，多个以逗号分开##########
 
 
@@ -32,30 +32,30 @@ app:
 
 
 #==============####jdbc配置==============####
-spring:
-  application:
-    name: mng-web # 注册到eureka上的服务名称
-  datasource: 
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
-    dialect: cn.sunline.edsp.tsp.plugins.mybatis.dialect.MySQLDialect
-    url: jdbc:mysql://192.168.171.13:3306/insd_std?useUnicode\=true&characterEncoding\=utf-8
-    username: insd_std
-    password: insd_qtb_std
-    showSql: false
-    initialSize: 5
-    minIdle: 5
-    maxActive: 20
-    maxWait: 60000
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: SELECT 'x'
-    testWhileIdle: false
-    testOnBorrow: false
-    testOnReturn: false
-    poolPreparedStatements: true
-    maxPoolPreparedStatementPerConnectionSize: 20
-    filters: stat,wall,log4j
-    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-  jpa:
-    show-sql: true
+#spring:
+#  application:
+#    name: travel-world-web # 注册到eureka上的服务名称
+#  datasource: 
+#    type: com.alibaba.druid.pool.DruidDataSource
+#    driver-class-name: com.mysql.jdbc.Driver
+#    dialect: cn.sunline.edsp.tsp.plugins.mybatis.dialect.MySQLDialect
+#    url: jdbc:mysql://192.168.171.1:3306/insd_std?useUnicode\=true&characterEncoding\=utf-8
+#    username: xxx
+#    password: xx
+#    showSql: false
+#    initialSize: 5
+#    minIdle: 5
+#    maxActive: 20
+#    maxWait: 60000
+#    timeBetweenEvictionRunsMillis: 60000
+#    minEvictableIdleTimeMillis: 300000
+#    validationQuery: SELECT 'x'
+#    testWhileIdle: false
+#    testOnBorrow: false
+#    testOnReturn: false
+#    poolPreparedStatements: true
+#    maxPoolPreparedStatementPerConnectionSize: 20
+#    filters: stat,wall,log4j
+#    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+#  jpa:
+#    show-sql: true
