--- a/travel-world-web/pom.xml
+++ b/travel-world-web/pom.xml
@@ -33,6 +33,13 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.11.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.54</version>
+		</dependency>
+
 		<dependency>
 			<groupId>travel-world-api</groupId>
 			<artifactId>travel-world-api</artifactId>
