--- a/travel-world-web/pom.xml
+++ b/travel-world-web/pom.xml
@@ -45,8 +45,23 @@
 			<artifactId>travel-world-api</artifactId>
 			<version>${parent.version}</version>
 		</dependency>
+	 <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>4.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.tess4j</groupId>
+            <artifactId>tess4j</artifactId>
+            <version>4.1.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.sun.jna</groupId>
+                    <artifactId>jna</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 	</dependencies>
-
 	<build>
 		<resources>
 			<resource>
